# argoss

./: .dockerignore  .env.bak  .env.example  .env.iot  .gitignore  .mcp.json  .mcp.json.disabled  1.bat  ACPBridge.py  ARGOS_BOOK_OF_MINDS.docx  ARGOS_CLIUDE_INTEGRATION_COMPLETE.md  ARGOS_INTEGRATION_GUIDE.md  CAPSTONE_AVR_FIX.md  CHANGELOG.md  CLAUDE.md  CLAUDE_INTEGRATION.md  CONTRIBUTING.md  DESKTOP_GUI_NO_KIVY.md  Dockerfile  KIMI_FINAL_SUMMARY.md  KIMI_INTEGRATION_COMPLETE.md  KIMI_TOOLS_GUIDE.md  LICENSE  Makefile  QUICKSTART_V2.md  QUICK_START.md  README.md  README_HEADER_V2.md  RELEASE_CHECKLIST.md  RELEASE_PREPARATION.md  REPORT.md  SKILLS_INTEGRATION_REPORT.md  __init__.py  ai_studio_code.py  ai_studio_code.py.bak  amd_gpu_patch.py  app.yaml  apply_apk_patch.sh  apply_patch.sh  arc_play.py  (+118 more)
.github/scripts/: publish_report_to_gist.py
.github/workflows/: android-apk.yml  argos_evolution_publish.yml  argos_report_to_gist.yml  auto_push.yml  build_apk.yml  build_apk_client.yml  build_windows.yml  ci.yml  docker.yml  fix-encoding.yml  github-workflow-fix-encoding.yml  master_argoss.yml  publish_pypi.yml  publish_testpypi.yml  release.yml  secret-scan.yml  status_report.yml  validate.yml
argos_deploy/: Dockerfile  add_methods.py  ai_failover.py  apply_integration.py  argos-claude.py  argos_full_auto_patch.py  argos_input_control_patch.py  argos_interactive.py  argos_patcher (1).py  argos_patcher (11).py  argos_patcher.py  argos_proxy.py  argos_service.py  argos_test_cli.py  argos_working_cli.py  auto_debug.py  autopilot.py  awareness (1).py  build.py  bump_version.py  check_all_patches.py  check_skills.py  check_three_models.py  cloud_entry.py  cloudbuild.yaml  colibri_daemon.py  complete_argos_server.py  connect_to_argos.py  corrected_argos_cli.py  crypto_monitor.py  debug_argos_client.py  debug_server.py  evolution_engine.py  final_argos_cli.py  fix.py  fix_db.py  fix_script.py  format_py.py  full_skills_audit.py  graceful_shutdown.py  (+33 more)
argos_deploy/.argos_patch_backups/: core_backup_20260411_022551.py
argos_deploy/SiGtRiP/: status_report.py
argos_deploy/acp_receiver/: acp_receiver.py
argos_deploy/argoss/: ai_failover.py  ardware_intel.py  argos_constitution.py  argos_core.py  argos_logger.py  bump_version.py  cleanup_repo.py  constitution_hooks.py  device_scanner.py  event_bus.py  fix_encoding.py  graceful_shutdown.py  health_monitor.py  infrastructure.py  launch_config.py  life_support.py  life_support_v2.py  main.py  organize_files.py  p2p_bridge.py  pack_archive.py  platform_admin.py  pricing.py  self_healing.py  server_rental.py  startup_validator.py  status_report.py  thought_book.py  tool_calling.py  validate_project.py  watson_bridge.py
argos_deploy/config/: peers.json
argos_deploy/hf-Argos/: app.py
argos_deploy/hf-harrier/: Dockerfile  app.py  requirements.txt
argos_deploy/piper1-gpl-main/: Dockerfile  (+1 more)
lora_rocm_setup/: README_rocm.md  dataset_example.jsonl  setup_rocm_wsl2.sh  train_lora_rocm.py
src/: ai_router.py  api_cost_optimizer.py  core.py  device_scanner.py  skill_loader.py
wg/: argos-pc-full.conf  argos-pc.conf  wg-0.conf  wg-au.conf  wg-jp.conf  wg0_au.conf  wg0_ext.conf  wg0_jp1.conf  wg0_jp2.conf  wg0_se.conf
(+506 files in other folders)
